--- a/Prework/index.html
+++ b/Prework/index.html
@@ -4,27 +4,42 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jesus Martinez</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
+
 <body>
 
 	<h2> Hi, I'm Jesus Martinez</h2>
 
 	<h3>Welcome to my personal web page!</h3>
+<div class="navbar">
+ <nav>
+	<div class="navlist">
+		<ul>
+		  <li><a href="pages/Recipes.html">Recipes</a></li>
+          <li><a href="pages/contacts.html">contacts</a></li>
+        </ul>
+    </div>
+  </nav>
+</div>
 
-	<p> I am currently enrolled in the Perscholas software engineer course. I am excited to be here and look forward to learning many things in the near future.
-	I was born and raised in New York City and have mostly done security work. I want to enter into the tech feild to provide a better life to my family.</p>
+	<div class="paragraphs"><p> I am currently enrolled in the Perscholas software engineer course. I am excited to be here and look forward to learning many things in the near future. <br>
+	I was born and raised in New York City and have mostly done security work. I want to enter into the tech feild to provide a better life to my family.</p></div>
 
 <a href="https://www.linkedin.com/in/jesus-martinez-8a537a144/"><img src="https://media-exp1.licdn.com/dms/image/C5603AQF62-wkVIReSQ/profile-displayphoto-shrink_200_200/0/1566830410080?e=1641427200&v=beta&t=p-x0Cyr0gt_AvgNF_34bnx50_2R14TRTrVQGyz1t1Yw"></a>
 
 
-<p>This is a list of my favorite things in no paticuler order.</p>
+<p id="Favlist">This is a list of my favorite things in no paticuler order.</p>
 <ul>
 	<li>Going to the movies.</li>
 	<li>Cooking meals for friends and family.</li>
 	<li>Playing games with friends and family.</li>
 </ul>
 
+<p>This is a video I find amusing, enjoy.</p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/W85oD8FEF78" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 </body>
