my first commit

--- a/Prework/Pages/Recipes.html
+++ b/Prework/Pages/Recipes.html
@@ -23,31 +23,32 @@
 	</div>
  </nav>
 </div>
-
-<div class="paragraphs"><p>Here are some Of my favorite Recipes.</p></div>
-
-<table width="50%" border="solid"> 
-<tr>
-	<th>Dish Name</th>
-	<th>Recipe Link</th>
-	<th>Recipe Difficulty</th>
-</tr>
-<tr>
-	<td class="Tlink">Beef short ribs</td>
-	<td style="text-align:center"><a href="https://youtu.be/QnxLau7m600">Youtube</a></td>
-	<td style="text-align:center">3/5</td>
-</tr>
-<tr>
-	<td class="Tlink">Japanese Beef Curry</td>
-	<td style="text-align:center"><a href="https://youtu.be/-YTmqExyU58">Youtube</a></td>
-	<td style="text-align:center">3/5</td>
-</tr>
-<tr>
-	<td class="Tlink">Flan</td>
-	<td style="text-align:center"><a href="https://youtu.be/kiPoDlXONPI">Youtube</a></td>
-	<td style="text-align:center">4/5</td>
-</tr>
-</table>
-
+<div class="paragraphs"><p>Cooking is one of my favorite hobbies. Being able to focus on the ingrediants and tastes makes me forget evreything else in the world.<br> I also love when my family and friends enjoy the food i make. Cooking is a great way to relive some stress and focus on the now.</p></div>
+<div class="cooking">
+	<img src="../images/cooking.jpg">
+	<p>Here are some Of my favorite Recipes.</p>
+  <table width="50%" border="solid"> 
+  <tr>
+	  <th>Dish Name</th>
+	  <th>Recipe Link</th>
+	  <th>Recipe Difficulty</th>
+  </tr>
+  <tr>
+	  <td class="Tlink">Beef short ribs</td>
+	  <td style="text-align:center"><a href="https://youtu.be/QnxLau7m600">Youtube</a></td>
+	  <td style="text-align:center">3/5</td>
+  </tr>
+  <tr>
+	  <td class="Tlink">Japanese Beef Curry</td>
+	  <td style="text-align:center"><a href="https://youtu.be/-YTmqExyU58">Youtube</a></td>
+	  <td style="text-align:center">3/5</td>
+  </tr>
+  <tr>
+	   <td class="Tlink">Flan</td>
+	   <td style="text-align:center"><a href="https://youtu.be/kiPoDlXONPI">Youtube</a></td>
+    	<td style="text-align:center">4/5</td>
+  </tr>
+  </table>
+</div>
 </body>
 </html>
