--- a/Prework/Pages/Contacts.html
+++ b/Prework/Pages/Contacts.html
@@ -7,9 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
-
-
-
 <body>
 <h2>Contact</h2>
 
@@ -23,10 +20,11 @@
 	 </div>
   </nav>
 </div>
-<div class="paragraphs"><p>Please fill out the form to get in contact with me. I will get back to you in a timely manner. Thank you </p></div>
+<div class="paragraphs"><p>If you have any questions or suggestions please fill out the form below. </p></div>
 
-
+<div class="Gmailimg"><img src="../images/Gmail-logo.jpg"></div>
 <div class="ContactForm">
+
 	<div class="Formtitle">Contact form</div>
 <form action="#">
 
@@ -54,7 +52,7 @@
                          <div class="button"> <input type="submit" name="Submit" value="submit"> </div>
 </form>
 
-
+<div class="paragraphs"><p>After recieving your message pleas egive me 1-2 business days to email back a response. Thank you gor your time.</p></div>
 
 </body>
 </html>
