--- a/Practice/index.html.html
+++ b/Practice/index.html.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" type="text/css" href="css/stylelp.css">
     </head>
     <body>
-        <div>logo</div>
+        <div><h1>Logo</h1></div>
         <div class="Navbar">
             <nav>
              <div class="Nav List">
                 <ul>
-                    <li><a href="#">Random</a></li>
-                    <li><a href="#">Random2</a></li>
+                    <li><a href="https://www.linkedin.com/in/jesus-martinez-8a537a144/">Random</a></li>
+                    <li><a href="https://www.linkedin.com/in/jesus-martinez-8a537a144/">Random2</a></li>
 
                 </ul>
              </div>
